Added ip, nvar (in progress), hyperparameters collections, separate initialisation and training. Bug correction: speechcommand loading

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -50,11 +50,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d643a04-0a92-420b-8d57-e777e365dc69",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "raw",
+   "id": "dbe42c18-1b9d-4a2e-abcf-32b49e582737",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-13T13:20:35.752015Z",
+     "iopub.status.busy": "2024-11-13T13:20:35.751917Z",
+     "iopub.status.idle": "2024-11-13T13:20:36.160046Z",
+     "shell.execute_reply": "2024-11-13T13:20:36.159788Z",
+     "shell.execute_reply.started": "2024-11-13T13:20:35.752004Z"
+    }
+   },
    "source": [
     "from datasets.load_prediction import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -99,31 +105,27 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "5762b15b-a599-4ea4-b6b3-cb48fdc78947",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-10-04T11:57:47.080633Z",
-     "iopub.status.busy": "2024-10-04T11:57:47.080493Z",
-     "iopub.status.idle": "2024-10-04T11:57:49.539282Z",
-     "shell.execute_reply": "2024-10-04T11:57:49.539027Z",
-     "shell.execute_reply.started": "2024-10-04T11:57:47.080624Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98b96258-056e-47f5-a2de-995fa9b24690",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.load_classification import load_dataset_classification\n",
     "is_instances_classification = True\n",
     "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
     "\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"JapaneseVowels\"\n",
     "\n",
     "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c9d58795-9a5d-4b25-9237-a278de6600c6",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65d5ddde-f921-468c-abfc-cb56d1255be3",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.preprocessing import plot_classes_distribution\n",
     "\n",
@@ -148,23 +150,24 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedKFold, TimeSeriesSplit, StratifiedGroupKFold\n",
-    "from datasets.preprocessing import flexible_indexing\n",
-    "from datasets.preprocessing import plot_classes_distribution\n",
+    "from datasets.preprocessing import flexible_indexing, plot_classes_distribution\n",
     "\n",
     "# CROSS-VALIDATION METHODS\n",
     "# SEED\n",
     "SEED = 49387\n",
     "\n",
-    "use_cross_validation = False\n",
+    "use_cross_validation = True\n",
+    "\n",
+    "n_splits=2\n",
     "\n",
     "if use_cross_validation: # we split train between train and val\n",
     "    if is_instances_classification:\n",
     "        if groups is None:\n",
-    "            splits = StratifiedKFold(n_splits=2, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1))\n",
+    "            splits = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1))\n",
     "        else:\n",
-    "            splits = StratifiedGroupKFold(n_splits=2, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1), groups)\n",
+    "            splits = StratifiedGroupKFold(n_splits=n_splits, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1), groups)\n",
     "    else: #prediction\n",
-    "        splits = TimeSeriesSplit(n_splits=2).split(X_train_raw)\n",
+    "        splits = TimeSeriesSplit(n_splits=n_splits).split(X_train_raw)\n",
     "    \n",
     "    for i, (train_index, val_index) in enumerate(splits):\n",
     "        X_train = flexible_indexing(X_train_raw, train_index)\n",
@@ -172,7 +175,7 @@
     "        Y_train = flexible_indexing(Y_train_raw, train_index)\n",
     "        Y_val = flexible_indexing(Y_train_raw, val_index)\n",
     "        # SPLITS\n",
-    "        if is_multivariate and not is_instances_classification:\n",
+    "        if is_multivariate:\n",
     "            X_train_band, X_val_band, X_test_band = X_train, X_val, X_test_raw\n",
     "            del X_train, X_val\n",
     "        else:\n",
@@ -183,14 +186,12 @@
     "else: # then we use the test dataset\n",
     "    if is_multivariate:\n",
     "        X_train_band, X_test_band = X_train_raw, X_test_raw\n",
-    "        del X_train_raw, X_test_raw\n",
     "        X_val_band = None\n",
     "    else:\n",
     "        X_test, X_train = X_test_raw, X_train_raw\n",
     "        X_val, X_val_band = None, None\n",
-    "        del X_train_raw, X_test_raw\n",
     "    Y_train = Y_train_raw\n",
-    "    del Y_train_raw"
+    "    del Y_train_raw, X_train_raw, X_test_raw"
    ]
   },
   {
@@ -267,10 +268,10 @@
     "        X_val_band = generate_multivariate_dataset(\n",
     "            X_val, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
-    "    else:\n",
-    "        X_test_band = generate_multivariate_dataset(\n",
+    "    X_test_band = generate_multivariate_dataset(\n",
     "            X_test, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
-    "        )\n",
+    "    )\n",
+    "        \n",
     "elif is_multivariate and not use_spectral_representation:\n",
     "    print(f\"Converting multivariate to {spectral_representation}\") # if None we convert to temporal\n",
     "    X_train_band = generate_multivariate_dataset(\n",
@@ -280,10 +281,9 @@
     "        X_val_band = generate_multivariate_dataset(\n",
     "            X_val_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
     "        )\n",
-    "    else:\n",
-    "        X_test_band = generate_multivariate_dataset(\n",
-    "            X_test_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
-    "        )\n",
+    "    X_test_band = generate_multivariate_dataset(\n",
+    "        X_test_band, sampling_rate, is_instances_classification, peak_freqs, spectral_representation, hop=100\n",
+    "    )\n",
     "else:\n",
     "    print(\"Data is already spectral, nothing to do\")\n",
     "\n",
@@ -318,8 +318,8 @@
     "    test_x = X_val_band if use_cross_validation else X_test_band\n",
     "    test_y = Y_val if use_cross_validation else Y_test\n",
     "    # Concatenate train and test arrays for plotting\n",
-    "    combined_data = np.concatenate((X_train_band, test_x), axis=0)\n",
-    "    combined_Y = np.concatenate((Y_train, test_y), axis=0)\n",
+    "    train_test_data = np.concatenate((X_train_band, test_x), axis=0)\n",
+    "    train_test_Y = np.concatenate((Y_train, test_y), axis=0)\n",
     "    \n",
     "    # Calculate the merge point index\n",
     "    merge_point_index = X_train_band.shape[0] if not is_instances_classification else len(X_train_band)\n",
@@ -335,7 +335,7 @@
     "    j = 0\n",
     "    nb_variables = X_train_band.shape[1] if not is_instances_classification else X_train_band[0].shape[1]\n",
     "    for i in np.random.randint(0, nb_variables, size=3): \n",
-    "        plt.plot(range(DIFF), combined_data[:, i][WATCH_FROM:WATCH_TO], color=colors[j], label=f'Feature {i} at {round(flat_peak_freqs[i], 1)} Hz')\n",
+    "        plt.plot(range(DIFF), train_test_data[:, i][WATCH_FROM:WATCH_TO], color=colors[j], label=f'Feature {i} at {round(flat_peak_freqs[i], 1)} Hz')\n",
     "        j += 1\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
@@ -508,7 +508,8 @@
     "if is_instances_classification:\n",
     "    common_index = 1\n",
     "    print(\"Common index for multivariate classification should be 1\")\n",
-    "    print(\"\\nCheck it ! \\nFirst array \", X_train_band[0].shape, \" and second array\", X_train_band[2].shape)\n",
+    "    print(\"\\nCheck it ! \\nFirst array \", X_train_band[1].shape, \" and second array\", X_train_band[2].shape)\n",
+    "    print(\"\\nCheck it ! \\nFirst array \", X_val_band[1].shape, \" and second array\", X_val_band[2].shape)\n",
     "    common_size = X_train_band[0].shape[common_index]\n",
     "else:\n",
     "    common_index = 1\n",
@@ -539,7 +540,9 @@
    "id": "e7ddcde6-215a-464a-8634-624f11da4380",
    "metadata": {},
    "source": [
-    "### Visualisation checks"
+    "### Visualisation checks\n",
+    "\n",
+    "test if the filtering happened correctly"
    ]
   },
   {
@@ -574,30 +577,6 @@
     "plt.xlabel('Time', size=fontsize)\n",
     "plt.ylabel('Value', size=fontsize)\n",
     "plt.legend(fontsize=fontsize)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d58c6a9b-743a-4664-8fd1-773cd3ce3b8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DIFF = WATCH_TO - WATCH_FROM \n",
-    "flat_peak_freqs = np.hstack(peak_freqs) if is_multivariate else peak_freqs\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(14, 4))\n",
-    "colors = color_palette(\"tab20\")\n",
-    "j = 0\n",
-    "nb_variables = X_train_band.shape[1] if not is_instances_classification else X_train_band[0].shape[1]\n",
-    "for i in np.random.randint(0, nb_variables, size=3): \n",
-    "    plt.plot(range(DIFF), combined_data[:, i][WATCH_FROM:WATCH_TO] color=colors[j], label=f'Feature {i} at {round(flat_peak_freqs[i], 1)} Hz')\n",
-    "    j += 1\n",
-    "ax.spines['top'].set_visible(False)\n",
-    "ax.spines['right'].set_visible(False)\n",
-    "\n",
-    "plt.xlabel('Sample Index')\n",
-    "plt.ylabel('Feature Value')"
    ]
   },
   {
@@ -757,8 +736,8 @@
     "import optuna\n",
     "from performances.utility import retrieve_best_model\n",
     "\n",
-    "function_name = \"random\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
-    "study = retrieve_best_model(\"random\", dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
+    "function_name = \"hadsp\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "\n",
     "# Print the best hyperparameters\n",
     "print(\"Best hyperparameters: \")\n",
@@ -802,6 +781,8 @@
     "from reservoir.reservoir import init_matrices\n",
     "from connexion_generation.hag import run_algorithm\n",
     "from scipy import sparse\n",
+    "target_rate = 0.7\n",
+    "rate_spread = 0.1\n",
     "\n",
     "def initialise_and_run(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, seed, training_set):\n",
     "    \n",
@@ -935,7 +916,7 @@
     "colors = color_palette(\"tab20\")\n",
     "# NUMBER_OF_STEP_TO_WATCH \n",
     "WATCH_FROM = 0\n",
-    "WATCH_TO = 5000\n",
+    "WATCH_TO = 10000\n",
     "neurons_evolution = np.array(state_history_hag)[WATCH_FROM:WATCH_TO]\n",
     "x =range(len(state_history_hag))[WATCH_FROM:WATCH_TO]\n",
     "j = 0\n",
@@ -943,12 +924,19 @@
     "    ax.plot(x, neurons_evolution[: ,i], label=str(i), color=colors[j])\n",
     "    ax.text(-3+WATCH_FROM, neurons_evolution[0, i],  str(i), color=\"black\", fontsize=12)\n",
     "    j += 1\n",
+    "if function_name == \"hadsp\":\n",
+    "    ax.plot(x, np.ones(len(x))*(target_rate-rate_spread), color=\"red\", linestyle = \"--\")\n",
+    "    ax.plot(x, np.ones(len(x))*(target_rate+rate_spread), color=\"red\", linestyle = \"--\")\n",
+    "    ax.text(WATCH_TO, target_rate - rate_spread, r'$\\rho_r - \\beta_r$', color='red', fontsize=fontsize, va='center', ha='left')\n",
+    "    ax.text(WATCH_TO, target_rate + rate_spread, r'$\\rho_r + \\beta_r$', color='red', fontsize=fontsize, va='center', ha='left')\n",
+    "\n",
+    "# target_rate, rate_spread\n",
     "fontsize=18\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Time', size=fontsize)\n",
-    "plt.ylabel('Value', size=fontsize)\n",
+    "plt.ylabel('Neuron Activity', size=fontsize)\n",
     "plt.legend(fontsize=fontsize)"
    ]
   },
@@ -1661,8 +1649,7 @@
     "ExecuteTime": {
      "end_time": "2023-10-09T13:59:05.097521Z",
      "start_time": "2023-10-09T13:59:04.992489Z"
-    },
-    "jp-MarkdownHeadingCollapsed": true
+    }
    },
    "source": [
     "### Classification for univariate"
