--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -52,13 +52,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d51c0238-e4c8-44e3-b93a-0ab2ad3691d5",
+   "cell_type": "raw",
+   "id": "facf8949-dfbb-4f46-870e-a4c9b2d6e181",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-15T16:15:20.089847Z",
+     "iopub.status.busy": "2024-11-15T16:15:20.089722Z",
+     "iopub.status.idle": "2024-11-15T16:15:20.596972Z",
+     "shell.execute_reply": "2024-11-15T16:15:20.596689Z",
+     "shell.execute_reply.started": "2024-11-15T16:15:20.089837Z"
+    },
     "scrolled": true
    },
-   "outputs": [],
    "source": [
     "from datasets.load_prediction import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -95,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76d77234-56ae-4370-a931-9d698ac41286",
+   "id": "3eb188a0-a9a2-4b94-af1e-5b50dd6b1cd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +108,7 @@
     "is_instances_classification = True\n",
     "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
     "\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"SPEECHCOMMANDS\"\n",
     "\n",
     "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n",
     "\n",
@@ -184,8 +189,7 @@
     "#Preprocessing\n",
     "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from datasets.preprocessing import scale_data\n",
-    "from datasets.preprocessing import add_noise, duplicate_data\n",
+    "from datasets.preprocessing import scale_data, add_noise, duplicate_data\n",
     "\n",
     "# Define noise parameter\n",
     "noise_std = 0.001\n",
@@ -311,13 +315,13 @@
     "    if data_type == \"noisy\":\n",
     "        # Defining pretrain   \n",
     "        if not is_multivariate:\n",
-    "            X_pretrain_noisy.append(np.array(x_train_noisy)[indices].flatten())\n",
-    "        X_pretrain_band_noisy.append(np.array(x_train_band_noisy)[indices])\n",
+    "            X_pretrain_noisy.append(np.array(x_train_noisy, dtype=object)[indices].flatten())\n",
+    "        X_pretrain_band_noisy.append(np.array(x_train_band_noisy, dtype=object)[indices])\n",
     "\n",
     "    # Defining pretrain   \n",
     "    if not is_multivariate:\n",
-    "        X_pretrain.append(np.array(x_train)[indices].flatten())\n",
-    "    X_pretrain_band.append(np.array(x_train_band)[indices])\n"
+    "        X_pretrain.append(np.array(x_train, dtype=object)[indices].flatten())\n",
+    "    X_pretrain_band.append(np.array(x_train_band, dtype=object)[indices])\n"
    ]
   },
   {
@@ -331,11 +335,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5e2ac17-a4b5-4a6e-a6eb-d2e63438b0c8",
+   "id": "2786a3c5-4928-4952-8bdb-69067753e2ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sampling_rate/np.min(np.hstack(peak_freqs))"
+    "from scipy.special import comb\n",
+    "\n",
+    "def find_optimal_order(dim, delay, s, max_network_size, max_order_size=5):\n",
+    "    \"\"\"\n",
+    "    Finds the optimal order N and the total number of variables such that\n",
+    "    total_variables is less than or equal to max_network_size.\n",
+    "    \"\"\"\n",
+    "    delay_eff = (delay - 1) // (s + 1)\n",
+    "    N = 0\n",
+    "    total_variables = 0\n",
+    "\n",
+    "    while True:\n",
+    "        N += 1\n",
+    "        # Ensure N does not exceed max_order_size\n",
+    "        if N > max_order_size:\n",
+    "            N -= 1\n",
+    "            break\n",
+    "\n",
+    "        # Calculate the new combination incrementally\n",
+    "        new_comb = comb(dim * delay_eff + N - 1, N, exact=True)\n",
+    "        total_variables += new_comb\n",
+    "\n",
+    "        # Check if the total exceeds the maximum network size\n",
+    "        if total_variables > max_network_size:\n",
+    "            # Subtract the last addition and decrement N\n",
+    "            total_variables -= new_comb\n",
+    "            N -= 1\n",
+    "            break\n",
+    "\n",
+    "    return N, total_variables"
    ]
   },
   {
@@ -347,7 +380,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "#Pretraining\n",
     "from reservoir.reservoir import init_matrices\n",
     "from connexion_generation.hag import run_algorithm\n",
@@ -355,9 +387,8 @@
     "from numpy import random\n",
     "\n",
     "# Evaluating\n",
-    "from performances.esn_model_evaluation import init_and_train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "from performances.esn_model_evaluation import init_and_train_model_for_prediction\n",
-    "\n",
+    "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
+    "from performances.esn_model_evaluation import train_model_for_prediction, init_nvar_model, init_reservoir_model, init_ip_reservoir_model\n",
     "\n",
     "# score for prediction\n",
     "start_step = 30\n",
@@ -366,22 +397,23 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"random\" # \"desp\" ou \"hadsp\", \"random\" or \"random_ei\"\n",
+    "function_name = \"ip\" # \"desp\" ou \"hadsp\", \"random\", \"random_ei\", \"ip\", or \"nvar\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
-    "    \n",
     "\n",
     "def objective(trial):\n",
     "    # Suggest values for the parameters you want to optimize\n",
     "    # COMMON\n",
-    "    input_scaling = trial.suggest_float('input_scaling', 0.01, 0.2, step=0.005)\n",
-    "    bias_scaling = trial.suggest_float('bias_scaling', 0, 0.2, step=0.005)\n",
-    "    leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
-    "    input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
-    "    network_size = trial.suggest_int('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
     "    ridge = trial.suggest_int('ridge', -15, 1)\n",
     "    RIDGE_COEF = 10**ridge\n",
+    "\n",
+    "    if function_name != \"nvar\":\n",
+    "        network_size = trial.suggest_int('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
+    "        input_scaling = trial.suggest_float('input_scaling', 0.01, 0.2, step=0.005)\n",
+    "        bias_scaling = trial.suggest_float('bias_scaling', 0, 0.2, step=0.005)\n",
+    "        leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
+    "        input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
     "\n",
     "    min_window_size = sampling_rate/np.max(np.hstack(peak_freqs))\n",
     "    max_window_size = sampling_rate/np.min(np.hstack(peak_freqs))\n",
@@ -401,6 +433,18 @@
     "    elif function_name == \"random\" or function_name == \"random_ei\":\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
+    "    elif function_name == \"ip\":\n",
+    "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
+    "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
+    "        mu = trial.suggest_float('mu', 0, 1)\n",
+    "        sigma = trial.suggest_float('sigma', 0, 1)\n",
+    "    elif function_name == \"nvar\":\n",
+    "        delay = trial.suggest_int('delay', 1, 10)\n",
+    "        strides = trial.suggest_int('strides', 1, 2)\n",
+    "        max_order, network_size = find_optimal_order(delay, common_size, strides, RESERVOIR_SIZE, 4)\n",
+    "        order = trial.suggest_int('order', 1, max_order)\n",
+    "        network_size = trial.suggest_int('number_parameters', network_size, network_size)\n",
+    "        print(delay, strides, order)\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid function name: {function_name}\")\n",
     "\n",
@@ -416,25 +460,21 @@
     "        max_increment_span = int(max_window_size) if int(max_window_size) - 100 < 0 else int(max_window_size) - 100\n",
     "        time_increment_span = trial.suggest_int('time_increment_span', 0, max_increment_span)\n",
     "        MAX_TIME_INCREMENT = TIME_INCREMENT + time_increment_span #int(max_window_size) or None or TIME_INCREMENT\n",
-    "\n",
+    "    \n",
+    "    \n",
     "    # CROSS-VALIDATION METHODS\n",
     "    total_score = 0\n",
     "    for i in range(nb_splits):\n",
-    "        if variate_type == \"multi\":\n",
-    "            if is_instances_classification:\n",
-    "                common_index = 1\n",
-    "                common_size = X_train_band[i][0].shape[common_index]\n",
-    "            else:\n",
-    "                common_index = 1\n",
-    "                common_size = X_train_band[i].shape[common_index]\n",
+    "        common_index = 1\n",
+    "        if is_instances_classification:\n",
+    "            common_size = X_train_band[i][0].shape[common_index]\n",
     "        else:\n",
-    "            common_size = len(peak_freqs)\n",
-    "            \n",
+    "            common_size = X_train_band[i].shape[common_index]\n",
+    "        \n",
     "        # We want the size of the reservoir to be at least network_size\n",
     "        K = math.ceil(network_size / common_size)\n",
     "        n = common_size * K\n",
-    "\n",
-    "\n",
+    "    \n",
     "        pretrain_data = X_pretrain_band[i]\n",
     "        train_data = X_train_band[i]  # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
     "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
@@ -442,10 +482,14 @@
     "        # UNSUPERVISED PRETRAINING \n",
     "        if function_name == \"random_ei\":\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
+    "            bias *= bias_scaling\n",
+    "            Win *= input_scaling\n",
+    "        elif function_name == \"nvar\":\n",
+    "            pass\n",
     "        else:\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, seed=random.randint(0, 1000))\n",
-    "        bias *= bias_scaling\n",
-    "        Win *= input_scaling\n",
+    "            bias *= bias_scaling\n",
+    "            Win *= input_scaling\n",
     "\n",
     "        if function_name == \"hadsp\":\n",
     "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
@@ -456,21 +500,31 @@
     "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
     "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, \n",
     "                                    intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = nb_jobs_per_trial)\n",
-    "        elif function_name == \"random\" or function_name == \"random_ei\":\n",
+    "        elif function_name in [\"random\", \"random_ei\", \"ip\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
+    "        elif function_name == \"nvar\":\n",
+    "            pass\n",
     "        else:\n",
     "            raise ValueError(f\"Invalid function: {function_name}\")\n",
     "        \n",
     "\n",
     "        # TRAINING and EVALUATION\n",
+    "        if function_name == \"nvar\":\n",
+    "            reservoir, readout = init_nvar_model(delay, order, strides, ridge_coef=RIDGE_COEF)\n",
+    "        elif function_name == \"ip\":\n",
+    "            reservoir, readout = init_ip_reservoir_model(W, Win, bias, mu, sigma, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "        else:\n",
+    "            reservoir, readout = init_reservoir_model(W, Win, bias, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "\n",
     "        if is_instances_classification:\n",
-    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], n_jobs = nb_jobs_per_trial, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\")\n",
-    "            \n",
-    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = nb_jobs_per_trial)\n",
+    "            mode = \"sequence-to-vector\"\n",
+    "            train_model_for_classification(reservoir, readout, X_train_band[1], Y_train[1], n_jobs = nb_jobs_per_trial, mode=mode)\n",
+    "\n",
+    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = nb_jobs_per_trial, mode=mode)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "        else:\n",
-    "            esn = init_and_train_model_for_prediction(W, Win, bias, leaky_rate, activation_function, train_data, Y_train[i], RIDGE_COEF)\n",
+    "            esn = train_model_for_prediction(reservoir, readout, train_data, Y_train[i])\n",
     "            \n",
     "            Y_pred =  esn.run(val_data, reset=False)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
@@ -494,18 +548,20 @@
     "import optuna\n",
     "from optuna.samplers import TPESampler\n",
     "from performances.utility import camel_to_snake\n",
+    "from multiprocessing import Pool\n",
     "\n",
     "url= \"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
     "print(url)\n",
+    "\n",
+    "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
+    "print(study_name)\n",
+    "\n",
+    "direction = \"maximize\" if is_instances_classification else \"minimize\"\n",
     "\n",
     "storage = optuna.storages.RDBStorage(\n",
     "    url=url,\n",
     "    engine_kwargs={\"pool_size\": 20, \"connect_args\": {\"timeout\": 10}},\n",
     ")\n",
-    "study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
-    "print(study_name)\n",
-    "\n",
-    "direction = \"maximize\" if is_instances_classification else \"minimize\"\n",
     "sampler = TPESampler()\n",
     "\n",
     "def optimize_study(n_trials):\n",
@@ -517,9 +573,12 @@
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
-    "Parallel(n_jobs=n_parallel_studies)(\n",
-    "    delayed(optimize_study)(trials_per_process) for _ in range(n_parallel_studies)\n",
-    ")\n"
+    "#Parallel(n_jobs=n_parallel_studies)(\n",
+    "#    delayed(optimize_study)(trials_per_process) for _ in range(n_parallel_studies)\n",
+    "#)\n",
+    "\n",
+    "study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
+    "study.optimize(objective, n_trials=N_TRIALS)"
    ]
   },
   {
@@ -533,43 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49ee3d4e-e3c6-43fd-9ef8-cf41c858ebac",
-   "metadata": {
-    "jupyter": {
-     "is_executing": true
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b3d64cab7d596f8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "706a21dd-e005-416c-8558-78ec0754876f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cb269f4-e5e6-494a-bdaf-37bdf9bbd10d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8148d7b4-ea38-4f2a-a9fa-81dbe3b204b3",
+   "id": "bb0aa088-4f4e-4598-8424-0a6c6ea78620",
    "metadata": {},
    "outputs": [],
    "source": []
