--- a/3.test performances.ipynb
+++ b/3.test performances.ipynb
@@ -48,17 +48,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf5ee01d-db82-4cf0-afea-e7fbf1828d8d",
+   "cell_type": "raw",
+   "id": "8a69d5ad-05b6-44bc-8532-6fc5ae2bfc8f",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-18T12:29:33.628089Z",
+     "iopub.status.busy": "2024-11-18T12:29:33.627993Z",
+     "iopub.status.idle": "2024-11-18T12:29:34.042359Z",
+     "shell.execute_reply": "2024-11-18T12:29:34.042070Z",
+     "shell.execute_reply.started": "2024-11-18T12:29:33.628081Z"
+    },
     "scrolled": true
    },
-   "outputs": [],
    "source": [
-    "from datasets.load_datasets import load_dataset_prediction\n",
+    "from datasets.load_prediction import load_dataset_prediction\n",
     "is_instances_classification = False\n",
-    "dataset_name = \"Sunspot\"\n",
+    "dataset_name = \"MackeyGlass\"\n",
     "step_ahead=5\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_prediction(dataset_name, step_ahead, visualize=True)\n",
@@ -99,23 +104,17 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "7bb9e213-15eb-4285-8e62-f08330be3b34",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-09-08T16:32:19.629216Z",
-     "iopub.status.busy": "2024-09-08T16:32:19.629093Z",
-     "iopub.status.idle": "2024-09-08T16:32:21.193895Z",
-     "shell.execute_reply": "2024-09-08T16:32:21.193584Z",
-     "shell.execute_reply.started": "2024-09-08T16:32:19.629206Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40f60efc-19a6-49a7-b95b-432df345fa8d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from datasets.load_classification import load_dataset_classification\n",
     "is_instances_classification = True\n",
     "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
     "\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"SPEECHCOMMANDS\"\n",
     "\n",
     "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n",
     "\n",
@@ -287,12 +286,12 @@
     "if data_type == \"noisy\":\n",
     "    # Defining pretrain   \n",
     "    if not is_multivariate:\n",
-    "        X_pretrain_noisy = np.array(X_train_noisy)[indices]\n",
-    "    X_pretrain_band_noisy = np.array(X_train_band_noisy)[indices]\n",
+    "        X_pretrain_noisy = np.array(X_train_noisy, dtype=object)[indices].flatten()\n",
+    "    X_pretrain_band_noisy = np.array(X_train_band_noisy, dtype=object)[indices]\n",
     "\n",
     "if not is_multivariate:\n",
-    "    X_pretrain_uni = np.array(X_train)[indices]\n",
-    "X_pretrain_band = np.array(X_train_band)[indices]"
+    "    X_pretrain = np.array(X_train, dtype=object)[indices].flatten()\n",
+    "X_pretrain_band = np.array(X_train_band, dtype=object)[indices]"
    ]
   },
   {
@@ -319,11 +318,11 @@
     "from connexion_generation.hag import run_algorithm\n",
     "\n",
     "# Evaluating\n",
-    "from performances.esn_model_evaluation import init_and_train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "from performances.esn_model_evaluation import init_and_train_model_for_prediction\n",
+    "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
+    "from performances.esn_model_evaluation import train_model_for_prediction, init_nvar_model, init_reservoir_model, init_ip_reservoir_model\n",
     "\n",
     "import optuna\n",
-    "from performances.utility import camel_to_snake\n",
+    "from performances.utility import camel_to_snake, retrieve_best_model\n",
     "\n",
     "if is_instances_classification:\n",
     "    file_name = \"test_results_classification.csv\"\n",
@@ -333,19 +332,17 @@
     "\n",
     "def evaluate_dataset_on_test(dataset_name, function_name, data_type):\n",
     "    # Get the best trial from the study\n",
-    "    url= \"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
-    "    study_name = function_name + \"_\" + dataset_name + \"_\" + data_type + \"_\" + variate_type\n",
-    "    study = optuna.load_study(study_name=study_name, storage=url) # To load an existing study\n",
-    "    best_trial = study.best_trial\n",
+    "    study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = data_type)\n",
     "    \n",
-    "     # Collect all hyperparameters in a dictionary\n",
-    "    hyperparams = {param_name: param_value for param_name, param_value in best_trial.params.items()}\n",
+    "    # Collect all hyperparameters in a dictionary\n",
+    "    hyperparams = {param_name: param_value for param_name, param_value in study.best_trial.params.items()}\n",
+    "    print(hyperparams)\n",
+    "    if function_name != \"nvar\":\n",
+    "        leaky_rate = 1\n",
+    "        input_connectivity = 1\n",
     "\n",
-    "    # Add default values or other logic adjustments\n",
     "    if 'variance_target' not in hyperparams and 'min_variance' in hyperparams:\n",
     "        hyperparams['variance_target'] = hyperparams['min_variance']\n",
-    "    \n",
-    "\n",
     "    if not is_instances_classification:\n",
     "        use_full_instance = None\n",
     "\n",
@@ -359,22 +356,18 @@
     "    max_window_size = sampling_rate/np.min(np.hstack(peak_freqs))\n",
     "    RIDGE_COEF = 10**hyperparams['ridge']\n",
     "    \n",
-    "    if function_name == \"hadsp\" or function_name == \"desp\":\n",
+    "    if function_name in [\"hadsp\", \"desp\"]:\n",
     "        max_increment_span = int(max_window_size) if int(max_window_size) - 100 < 0 else int(max_window_size) - 100\n",
     "        MAX_TIME_INCREMENT = hyperparams['time_increment'] + hyperparams['time_increment_span'] #int(max_window_size) or None or TIME_INCREMENT\n",
     "    \n",
     "    scores = [] \n",
     "    for i in range(nb_trials):\n",
-    "        if variate_type == \"multi\":\n",
-    "            if is_instances_classification:\n",
-    "                common_index = 1\n",
-    "                common_size = X_train_band[0].shape[common_index]\n",
-    "            else:\n",
-    "                common_index = 1\n",
-    "                common_size = X_train_band.shape[common_index]\n",
+    "        common_index = 1\n",
+    "        if is_instances_classification:\n",
+    "            common_size = X_train_band[0].shape[common_index]\n",
     "        else:\n",
-    "            common_size = len(peak_freqs)\n",
-    "            \n",
+    "            common_size = X_train_band.shape[common_index]\n",
+    "\n",
     "        # We want the size of the reservoir to be at least network_size\n",
     "        K = math.ceil(hyperparams['network_size'] / common_size)\n",
     "        n = common_size * K\n",
@@ -385,12 +378,16 @@
     "    \n",
     "        # UNSUPERVISED PRETRAINING \n",
     "        if function_name == \"random_ei\":\n",
-    "            Win, W, bias = init_matrices(n, hyperparams['input_connectivity'], hyperparams['connectivity'],  K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
+    "            bias *= hyperparams['bias_scaling']\n",
+    "            Win *= hyperparams['input_scaling']\n",
+    "        elif function_name == \"nvar\":\n",
+    "            pass\n",
     "        else:\n",
-    "            Win, W, bias = init_matrices(n, hyperparams['input_connectivity'], hyperparams['connectivity'],  K, seed=random.randint(0, 1000))\n",
-    "        bias *= hyperparams['bias_scaling']\n",
-    "        Win *= hyperparams['input_scaling']\n",
-    "    \n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'] ,  K, seed=random.randint(0, 1000))\n",
+    "            bias *= hyperparams['bias_scaling']\n",
+    "            Win *= hyperparams['input_scaling']\n",
+    "\n",
     "        if function_name == \"hadsp\":\n",
     "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, hyperparams['time_increment'], hyperparams['weight_increment'],\n",
     "                                     hyperparams['target_rate'], hyperparams['rate_spread'], function_name, is_instance=is_instances_classification, use_full_instance=use_full_instance,\n",
@@ -400,25 +397,35 @@
     "                                        hyperparams['variance_target'], hyperparams['variance_spread'], function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
     "                                        max_increment=MAX_TIME_INCREMENT, max_partners=hyperparams['max_partners'], method = hyperparams['method'], \n",
     "                                        intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], n_jobs = nb_jobs)\n",
-    "        elif function_name == \"random\" or function_name == \"random_ei\":\n",
+    "        elif function_name in [\"random\", \"random_ei\", \"ip\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= hyperparams['spectral_radius'] / max(abs(eigen))\n",
+    "        elif function_name == \"nvar\":\n",
+    "            pass\n",
     "        else:\n",
     "            raise ValueError(f\"Invalid function: {function_name}\")\n",
     "        \n",
-    "    \n",
+    "\n",
     "        # TRAINING and EVALUATION\n",
+    "        if function_name == \"nvar\":\n",
+    "            reservoir, readout = init_nvar_model(delay, order, strides, ridge_coef=RIDGE_COEF)\n",
+    "        elif function_name == \"ip\":\n",
+    "            reservoir, readout = init_ip_reservoir_model(W, Win, bias, hyperparams['mu'], hyperparams['sigma'], hyperparams['leaky_rate'], activation_function, ridge_coef=RIDGE_COEF)\n",
+    "        else:\n",
+    "            reservoir, readout = init_reservoir_model(W, Win, bias, hyperparams['leaky_rate'], activation_function, ridge_coef=RIDGE_COEF)\n",
+    "\n",
     "        if is_instances_classification:\n",
-    "            reservoir, readout = init_and_train_model_for_classification(W, Win, bias, hyperparams['leaky_rate'], activation_function, train_data, Y_train, n_jobs = nb_jobs, ridge_coef=RIDGE_COEF, mode=\"sequence-to-vector\", hide_progress=True)\n",
-    "            \n",
-    "            Y_pred = predict_model_for_classification(reservoir, readout, test_data, n_jobs = nb_jobs, hide_progress=True)\n",
+    "            mode = \"sequence-to-vector\"\n",
+    "            train_model_for_classification(reservoir, readout, train_data, Y_train, n_jobs = nb_jobs, mode=mode)\n",
+    "\n",
+    "            Y_pred = predict_model_for_classification(reservoir, readout, test_data, n_jobs = nb_jobs, mode=mode)\n",
     "            score = compute_score(Y_pred, Y_test, is_instances_classification)\n",
     "        else:\n",
-    "            esn = init_and_train_model_for_prediction(W, Win, bias, hyperparams['leaky_rate'], activation_function, train_data, Y_train, RIDGE_COEF)\n",
+    "            esn = train_model_for_prediction(reservoir, readout, train_data, Y_train)\n",
     "            \n",
     "            Y_pred =  esn.run(test_data, reset=False)\n",
     "            score = compute_score(Y_pred, Y_test, is_instances_classification)\n",
-    "    \n",
+    "\n",
     "        scores.append(score)\n",
     "\n",
     "    return scores\n"
@@ -443,7 +450,7 @@
     "\n",
     "# Simulate your data and loop for evaluation\n",
     "print(dataset_name)\n",
-    "for function_name in [\"desp\", \"hadsp\", \"random\", \"random_ei\"]:\n",
+    "for function_name in [\"ip\"]: # \"desp\", \"hadsp\", \"random\", \"random_ei\", \n",
     "    print(function_name)\n",
     "    scores = evaluate_dataset_on_test(dataset_name, function_name, data_type)\n",
     "    \n",
@@ -558,7 +565,7 @@
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "functions = df['Function'].unique()\n",
     "x = np.arange(len(df['Dataset'].unique()))  # The label locations\n",
-    "width = 0.2  # Width of the bars\n",
+    "width = 0.15  # Width of the bars\n",
     "colors = color_palette(\"tab20\")\n",
     "\n",
     "for i, func in enumerate(functions):\n",
@@ -583,12 +590,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "13ceb9a8-143e-422f-8867-94190ab32b3c",
+   "metadata": {},
+   "source": [
+    "# Best parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ad4008f0-d80d-4833-a854-4b672c298339",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import optuna\n",
+    "import pandas as pd\n",
+    "from performances.utility import camel_to_snake, retrieve_best_model\n",
+    "\n",
+    "\n",
+    "# List of datasets (extract from filenames)\n",
+    "datasets = [\n",
+    "    \"CatsDogs\",\n",
+    "    \"FSDD\",\n",
+    "    \"JapaneseVowels\",\n",
+    "    \"Lorenz\",\n",
+    "    \"MackeyGlass\",\n",
+    "    \"SPEECHCOMMANDS\",\n",
+    "    \"SpokenArabicDigits\",\n",
+    "    \"Sunspot\",\n",
+    "]\n",
+    "\n",
+    "# Initialize an empty list to store results\n",
+    "results = []\n",
+    "\n",
+    "for dataset in datasets:\n",
+    "    study = retrieve_best_model(\"random_ei\", dataset, is_multivariate=True, variate_type = \"multi\", data_type = \"normal\")\n",
+    "    best_trial = study.best_trial\n",
+    "    results.append({\n",
+    "        \"dataset\": dataset,\n",
+    "        \"function_name\": \"random_ei\",\n",
+    "        **best_trial.params,\n",
+    "    })\n",
+    "# Convert results to a DataFrame\n",
+    "df = pd.DataFrame(results)\n",
+    "\n",
+    "# Save to CSV\n",
+    "df.to_csv(\"best_hyperparameters_esn.csv\", index=False)\n",
+    "\n",
+    "print(\"Results saved to best_hyperparameters_deep.csv\")\n"
+   ]
   },
   {
    "cell_type": "code",
